--- a/api/about/models/about.settings.json
+++ b/api/about/models/about.settings.json
@@ -14,7 +14,7 @@
   "attributes": {
     "header": {
       "type": "component",
-      "repeatable": true,
+      "repeatable": false,
       "component": "page.header"
     },
     "hero": {
